--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-crawler",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node main.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
